# Market-Data-Aggregation-Docker-SQLAlchemy

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  compose.yml  dash_only.py  dash_plotly.py  for_test_purpose_only.yml  launch.yml  main.py  postgrs_on_docker.yml  project_settings.py  pyproject.toml  requirements.txt
.github/workflows/: images.yml  main.yml
alembic/: env.py
alembic/versions/: 2025_03_31_0226-b9d20e914454_first.py  2025_04_21_0122-c558b5a4d156_removing_the_third_table.py
app/aiohttp/: connection.py  models.py  settings.py
app/dash/: .dockerignore  Dockerfile  data_processing.py
app/dash/assets/: style.css  tooltip.js
app/dash/crud/: read_data_for_calculation.py
app/db/: config.py  db_connection.py
app/db/models/: base.py  mixin.py  models.py
app/db/schemas/: schemas.py
app/repositories/: base_repository.py  dividends.py  processed_data.py  results_trades.py
app/services/: data_collection.py  data_processing.py  unitofwork.py
app/utils/: utils.py
logs/: config.py
src/: data_collection.py  data_processing.py  utils.py
src/aiohttp/: connection.py  settings.py
src/dash/: connection.py  dash_plotly.py  queries.py  settings.py
src/dash/assets/: shutdown.js
src/db/: config.py  connection.py  crud.py  queries.py  schemas.py
src/pydantic/: models.py
tests/: .test.env  docker_for_tests.yml
tests/crud/: readme.md
tests/data_collection/: conftest.py  test_data_collection.py
tests/data_collection/data/: dividends.py  moex_0.py  moex_1.py
